---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var lhs : real\nvar rhs : boolean\nlhs += rhs\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(0))) TyRef(Real(Real))
    TypeId(HirId(Idx::<HirNode>(2))) TyRef(Boolean)
def_kinds:
    DefId(0) Var(TyRef(Real(Real)))
    DefId(1) Var(TyRef(Boolean))
error at 37..38: incompatible types for addition
| info: operands must both be numbers, strings, or sets
